--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>CSS Position</title>
 <link rel="stylesheet" href="css/font-awesome.min.css">	
 	<!-- Css linking here -->
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1> This is  the flag of Bangladesh</h1>
