--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>CSS Position</title>
-<link rel="stylesheet" href="css/font-awesome.min.css">	
+<link rel="stylesheet" href="font-awesome.min.css">	
 	<!-- Css linking here -->
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -12,10 +12,10 @@
 	<h1> This is  the flag of Bangladesh</h1>
 	<div class="green">
      <div class="red"> </div>
-<img src="images/fb.png" alt="" class="share">
-<img src="images/twitter.png" alt="" class="share1">
-<img src="images/youtube.png" alt="" class="share2">
-<img src="images/in.png"alt class="share3">
+<img src="fb.png" alt="" class="share">
+<img src="twitter.png" alt="" class="share1">
+<img src="youtube.png" alt="" class="share2">
+<img src="in.png"alt class="share3">
 </div>
 <section class="social-media">
 <ul class="social-media-icons">		
